--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-node_modules
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build folders
+dist/
+build/
+
+# Environment files
 .env
-build
-dist
+
+# OS files
+.DS_Store
+Thumbs.db
